tests/paczka1/small_fuzzy/51275035.err
Error in line 2: zSthAII S160 62,7
Error in line 9: A367 A545 73,5
Error in line 1: YBl A545 64,9
Error in line 12: ZTwjdVfMoV A292 74,0
